--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
     compile group: "com.twilio.sdk", name: "twilio", version: "7.11.+"
+    compile 'com.google.firebase:firebase-core:11.4.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
