preliminary working, need to add contacts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cddj.gatech.edu.safecheck">
 
+    <uses-permission android:name="android.permission.SEND_SMS"> </uses-permission>
+
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" ></uses-permission>
+    <uses-permission android:name="android.permission.READ_PROFILE" ></uses-permission>
+    <uses-permission android:name="android.permission.READ_CONTACTS" ></uses-permission>
+
 
     <application
         android:allowBackup="true"
@@ -21,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".SendTextActivity"></activity>
+
+
+
     </application>
 
 </manifest>
