--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="cddj.gatech.edu.safecheck">
 
     <uses-permission android:name="android.permission.SEND_SMS"> </uses-permission>
+    <uses-permission android:name="android.permission.READ_CONTACTS" ></uses-permission>
+
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" ></uses-permission>
