added login, modified loadcontacts to use default android contact viewer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
         <activity android:name=".HomeActivity"></activity>
         <activity android:name=".SendTextActivity"></activity>
-
+        <activity android:name=".LoadContactsActivity"></activity>
 
 
     </application>
